Fix padding and contrast

--- a/src/components/PokemonInfoBanner.scss
+++ b/src/components/PokemonInfoBanner.scss
@@ -87,7 +87,7 @@ table {
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    gap: 3px;
+    gap: 9px;
     a {   
         color: inherit;
         text-decoration: none;
