--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,7 @@ code {
     --borderColor2: #424a53;
     --borderColorSearchBar: rgba(66, 74, 83, 0.3);
     --bannerBorderColor: #d0d0d0;
+    --button-selected: #24292f;
     --contentBackground: #24292f;
     --buttonsBackground: #384049;
     --dropdownOptionBlurred: #2b3138;
@@ -86,6 +87,7 @@ code {
     --borderColor2: rgb(204, 204, 204);
     --borderColorSearchBar: rgba(204, 204, 204, 0.5);
     --bannerBorderColor: #d0d0d0;
+    --button-selected: rgb(245, 245, 245);
     --contentBackground: #fff;
     --buttonsBackground: rgb(235, 235, 235);
     --dropdownOptionBlurred: rgb(235, 235, 235);
