--- a/src/views/pokedex.scss
+++ b/src/views/pokedex.scss
@@ -61,7 +61,7 @@
 }
 
 .selected {
-    background-color: var(--contentBackground);
+    background-color: var(--button-selected);
 }
 
 .pokedex {
